--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll-horizontal": "^1.6.4",
+    "react-scroll-parallax": "^2.3.2",
     "react-three-fiber": "^4.1.1",
     "styled-components": "^5.1.0",
     "three": "^0.115.0"
